--- a/index.html
+++ b/index.html
@@ -5,9 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ping coming soon</title>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
-    
+
+    <div class="contenitore_principale">
+
+        <!--Header-->
+
+        <header>
+            <div class="ct_header">
+                1
+            </div>
+        </header>
+
+        <!--Main-->
+
+        <main>
+
+            <!--Contenitore parte sopra-->
+
+            <div class="ct_up">
+                2
+            </div>
+
+            <!--Contenitore parte sotto-->
+
+            <div class="ct_down">
+                3  
+            </div>
+        </main>
+
+        <!--Footer-->
+
+        <footer>
+            <div class="ct_footer">
+                4
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
