--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
             <div class="ct_header">
-                1
+                <img src="img/logo.svg" alt="Logo">
             </div>
         </header>
 
