--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
             <!--Contenitore parte sopra-->
 
             <div class="ct_up">
-                2
+                <h1>We are launching <strong>soon!</strong></h1>
+                <h5>Subscribe and get notified</h5>
+                <form action="#">
+                    <input type="text" placeholder="Your email anddress...">
+                    <button> Notify Me</button>
+                </form>
+
             </div>
 
             <!--Contenitore parte sotto-->
