Creazione main contenitore down

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--Contenitore parte sotto-->
 
             <div class="ct_down">
-                3  
+                <img src="img/illustration-dashboard.png" alt="Immagine dell'app">
             </div>
         </main>
 
