--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                 <h1>We are launching <strong>soon!</strong></h1>
                 <h5>Subscribe and get notified</h5>
                 <form action="#">
-                    <input type="text" placeholder="Your email anddress...">
+                    <input type="email" placeholder="Your email anddress...">
                     <button> Notify Me</button>
-                </form>
+                </form>  
+                <span>Please provide a valid email address</span>
 
             </div>
 
@@ -52,9 +53,9 @@
         <footer>
             <div class="ct_footer">
                 <div>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <div>
                     <span>@ Copyright Ping: All rights reserved</span>
