--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <form action="#">
                     <input type="email" placeholder="Your email anddress...">
                     <button> Notify Me</button> 
-                    <span>Please provide a valid email address</span>
+                    <!--<span>Please provide a valid email address</span>-->
                 </form>  
             </div>
 
@@ -51,7 +51,7 @@
 
         <footer>
             <div class="ct_footer">
-                
+
                 <div>
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
